[Add]: Swagger Category and Edit Routes
